Added methods for editing customer details.